--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,4 @@ jobs: # 执行的工作
           pip install -r ./requirements.txt 
  
       - name: Run main.py
-        run: python myPikpakQQEmail.py # 执行py文件    依据自己代码要运行的py情况而定
+        run: python Python/PikPak/二改/myPikpakQQEmail.py # 执行py文件    依据自己代码要运行的py情况而定
